tests/paczka1/small_fuzzy/25427655.err
Error in line 1: dIlLokT A265 96,5
Error in line 2: cxuRqd S650 47,6
Error in line 7: tDwWoGcPbEV A407 466,5
